--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -11,9 +11,7 @@
     <!-- Top certificate has margin top 30, all the others have margin top 40 -->
     <div class="w3-container my-margin-top-30">
         <h3>Online JavaScript Course</h3>
-        <p>
-            "Implementing algorithms and data structures using JavaScript."
-        </p>
+        <p>"Implementing algorithms and data structures using JavaScript."</p>
         <a
             href="{{ url_for('static', filename='docs/cert-fcc-javascript-dsa.pdf') }}"
             target="_blank"
@@ -94,7 +92,8 @@
             />
         </a>
         <p>
-            <a href="https://freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/back-end-development-and-apis"
+            <a
+                href="https://freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/back-end-development-and-apis"
                 >View API certificate and course projects on freeCodeCamp</a
             >
         </p>
