--- a/app/templates/project-drum-set.html
+++ b/app/templates/project-drum-set.html
@@ -1,10 +1,8 @@
-{% extends "project-base.html" %}
-
-{% block project_written_content %}
-<p>
-    A web based drum set played using the mouse or the keyboard.
-</p>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
+{% extends "project-base.html" %} {% block project_written_content %}
+<p>A web based drum set played using the mouse or the keyboard.</p>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">
+    JavaScript
+</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Sass</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">HTML</div>
