--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -1,12 +1,12 @@
-{% extends "project-base.html" %}
-
-{% block project_written_content %}
+{% extends "project-base.html" %} {% block project_written_content %}
 <p>
-    A JavaScript implementation of the Simon Memory Game. Replicate
-    the colour pattern shown on the squares. The more you correctly replicate the pattern, the longer the pattern gets.
-    How many levels can you complete?
+    A JavaScript implementation of the Simon Memory Game. Replicate the colour
+    pattern shown on the squares. The more you correctly replicate the pattern,
+    the longer the pattern gets. How many levels can you complete?
 </p>
-<div class="w3-tag w3-round w3-white my-shared-technologies-tag">JavaScript</div>
+<div class="w3-tag w3-round w3-white my-shared-technologies-tag">
+    JavaScript
+</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">jQuery</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">CSS</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Sass</div>
