--- a/app/templates/project-base.html
+++ b/app/templates/project-base.html
@@ -2,37 +2,44 @@
 
 <!-- The body for the project. -->
 {% block content %}
-<main class="w3-container my-project-base-container my-project-base-container-limit-width">
+<main
+    class="w3-container my-project-base-container my-project-base-container-limit-width"
+>
     <div class="w3-row">
-
         <div class="w3-col l6">
             <div class="w3-container">
                 <!-- w3-section is 16px margin to top and bottom -->
-                <img class="my-project-base-hero-image-limit-width w3-section" src="{{ url_for('static', filename=project['hero']) }}"
-                    alt="hero image">
+                <img
+                    class="my-project-base-hero-image-limit-width w3-section"
+                    src="{{ url_for('static', filename=project['hero']) }}"
+                    alt="hero image"
+                />
             </div>
         </div>
 
         <div class="w3-col l6">
             <article class="w3-container">
-                <h2 class="my-project-base-title">
-                    {{ project['name'] }}
-                </h2>
+                <h2 class="my-project-base-title">{{ project['name'] }}</h2>
                 <p>
-                    <a href="{{ project['production'] }}" target="_blank" rel="noopener noreferrer">
-                        <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View in
-                            production</span></a>
+                    <a
+                        href="{{ project['production'] }}"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <span
+                            class="w3-tag w3-round w3-green my-shared-animated-tag-link"
+                            >View in production</span
+                        ></a
+                    >
                 </p>
                 <p>
                     <!-- To do: Could add a text description in the project's dictionary and
                     use that here instead of manually putting it in a new HTML file that
                     is extending this HTML file. -->
-                    {% block project_written_content %}
-                    {% endblock %}
+                    {% block project_written_content %} {% endblock %}
                 </p>
             </article>
         </div>
-
     </div>
 </main>
 {% endblock %}
