--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -1,14 +1,11 @@
-{% extends "project-base.html" %}
-
-{% block project_written_content %}
+{% extends "project-base.html" %} {% block project_written_content %}
 <!-- A direct link to the replit webpage where the python code can be run. -->
 <!-- The code on replit is from bitbucket.org:weebucket/week11-day03-python-sqlite-pandas-retro-view-to-cmd-line.git -->
 <p>
-    A Python program for querying a SQLite film database. The user can perform CRUD operations on the database via a command
-    line interface.
-    Pandas library is used for formatting the tables.
-    The source code is hosted on Replit where it can be
-    viewed and executed.
+    A Python program for querying a SQLite film database. The user can perform
+    CRUD operations on the database via a command line interface. Pandas library
+    is used for formatting the tables. The source code is hosted on Replit where
+    it can be viewed and executed.
 </p>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Python</div>
 <div class="w3-tag w3-round w3-white my-shared-technologies-tag">Pandas</div>
