contact endpoint now has cv link

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -27,6 +27,12 @@
             <span style="color: gray">@sfraser-dev</span></a
         >
     </div>
+    <div class="w3-container my-contact-container">
+        <a href="../static/docs/Stewart-Fraser-CV.pdf" class="my-contact-link"
+            ><i class="fa-brands fa-github"></i> CV:
+            <span style="color: gray">view PDF</span></a
+        >
+    </div>
     <!--
     <div class="w3-container my-contact-container">
         <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
