change css style names from contact to info

--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -1,41 +1,41 @@
 {% extends "base.html" %}
 
-<!-- The body for the contact page. -->
+<!-- The body for the info page. -->
 {% block content %}
 <main class="w3-container w3-margin-bottom">
-    <div class="w3-container my-contact-container">
+    <div class="w3-container my-info-container">
         <i class="fa-solid fa-phone"></i> Mobile:
         <span style="color: gray">+44-77-4067-8423</span>
     </div>
-    <div class="w3-container my-contact-container">
-        <a href="mailto:contact@sfraser.io" class="my-contact-link"
+    <div class="w3-container my-info-container">
+        <a href="mailto:contact@sfraser.io" class="my-info-link"
             ><i class="fa-regular fa-envelope"></i> Email:
             <span style="color: gray">contact@sfraser.io</span></a
         >
     </div>
-    <div class="w3-container my-contact-container">
+    <div class="w3-container my-info-container">
         <a
             href="https://www.linkedin.com/in/sfraser-dev"
-            class="my-contact-link"
+            class="my-info-link"
             ><i class="fa-brands fa-linkedin"></i> LinkedIn:
             <span style="color: gray">sfraser-dev</span></a
         >
     </div>
-    <div class="w3-container my-contact-container">
-        <a href="https://github.com/sfraser-dev" class="my-contact-link"
+    <div class="w3-container my-info-container">
+        <a href="https://github.com/sfraser-dev" class="my-info-link"
             ><i class="fa-brands fa-github"></i> GitHub:
             <span style="color: gray">@sfraser-dev</span></a
         >
     </div>
-    <div class="w3-container my-contact-container">
-        <a href="../static/docs/Stewart-Fraser-CV.pdf" class="my-contact-link"
+    <div class="w3-container my-info-container">
+        <a href="../static/docs/Stewart-Fraser-CV.pdf" class="my-info-link"
             ><i class="fa-brands fa-github"></i> CV:
             <span style="color: gray">view PDF</span></a
         >
     </div>
     <!--
-    <div class="w3-container my-contact-container">
-        <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-contact-link"><i
+    <div class="w3-container my-info-container">
+        <a href="https://bitbucket.org/sfraser-dev/workspace/repositories" class="my-info-link"><i
                 class="fa-brands fa-bitbucket"></i> Bitbucket: @sfraser-dev (legacy)</a>
     </div>
     -->
