target=_blank for pdf opening

--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -14,9 +14,7 @@
         >
     </div>
     <div class="w3-container my-info-container">
-        <a
-            href="https://www.linkedin.com/in/sfraser-dev"
-            class="my-info-link"
+        <a href="https://www.linkedin.com/in/sfraser-dev" class="my-info-link"
             ><i class="fa-brands fa-linkedin"></i> LinkedIn:
             <span style="color: gray">sfraser-dev</span></a
         >
@@ -28,7 +26,11 @@
         >
     </div>
     <div class="w3-container my-info-container">
-        <a href="../static/docs/Stewart-Fraser-CV.pdf" class="my-info-link"
+        <a
+            href="../static/docs/Stewart-Fraser-CV.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="my-info-link"
             ><i class="fa-brands fa-github"></i> CV:
             <span style="color: gray">view PDF</span></a
         >
