--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -31,7 +31,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="my-info-link"
-            ><i class="fa-brands fa-github"></i> CV:
+            ><i class="fa-regular fa-file-lines"></i> CV:
             <span style="color: gray">view PDF</span></a
         >
     </div>
