view/controller comments in the app

--- a/app/templates/project-base.html
+++ b/app/templates/project-base.html
@@ -33,7 +33,7 @@
                     >
                 </p>
                 <p>
-                    <!-- To do: Could add a text description in the project's dictionary and
+                    <!-- TODO: Could add a text description in the project's dictionary and
                     use that here instead of manually putting it in a new HTML file that
                     is extending this HTML file. -->
                     {% block project_written_content %} {% endblock %}
