--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -68,7 +68,7 @@
                 <li><strong>SQL</strong> "The Complete SQL Bootcamp" (Udemy)</li>
                 <li><strong>Python</strong> "The Complete Python Bootcamp" (Udemy)</li>
             </ul><p>
-                <a href="{{ url_for('certificates') }}">
+                <a href="{{ url_for('certificates_page') }}">
                     <span class="w3-tag w3-round w3-green my-shared-animated-tag-link">View Certificates</span>
                 </a>
             </p>
