--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -12,7 +12,7 @@
             <!-- Use the class to remove the default link text decoration. -->
             <a
                 class="my-projects-card-link"
-                href="{{ url_for('project', slug=project['slug']) }}"
+                href="{{ url_for('project_index', slug=project['slug']) }}"
             >
                 <!-- The card (which is fully within an anchor tag - entirely clickable). -->
                 <article
