--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -27,7 +27,7 @@
             <div class="w3-container">
                 <h1>404 - Page Not Found</h1>
                 <p>Sorry, we couldn't find the page you were looking for.</p>
-                <a href="{{ url_for('home') }}">Go to home</a>
+                <a href="{{ url_for('home_page') }}">Go to home</a>
             </div>
         </main>
     </body>
