--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -27,7 +27,7 @@
             <div class="w3-container">
                 <h1>500 - Internal Server Error</h1>
                 <p>Sorry, something went wrong with the server.</p>
-                <a href="{{ url_for('home') }}">Go to home</a>
+                <a href="{{ url_for('home_page') }}">Go to home</a>
             </div>
         </main>
     </body>
