point to github not bitbucket

--- a/app/templates/project-film-database.html
+++ b/app/templates/project-film-database.html
@@ -1,6 +1,6 @@
 {% extends "project-base.html" %} {% block project_written_content %}
 <!-- A direct link to the replit webpage where the python code can be run. -->
-<!-- The code on replit is from bitbucket.org:weebucket/week11-day03-python-sqlite-pandas-retro-view-to-cmd-line.git -->
+<!-- The code on replit is from https://github.com/sfraser-dev/python-jit-sqlite-pandas-retro-views-to-terminal -->
 <p>
     A Python program for querying a SQLite film database. The user can perform
     CRUD operations on the database via a command line interface. Pandas library
