adding data analysis with python cert

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -60,6 +60,7 @@
                 Recent course certificates awarded for:
             </p>
             <ul>
+                <li><strong>Python</strong> "Data Analysis with Python" (freeCodeCamp)</li>
                 <li><strong>JavaScript</strong> "JavaScript Algorithms and Data Structures" (freeCodeCamp)</li>
                 <li><strong>C#</strong> "Foundational C# with Microsoft" (Microsoft & freeCodeCamp)</li>
                 <li><strong>Go</strong> "The Complete Developer's Guide" (Udemy)</li>
