--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -10,6 +10,27 @@
     </div>
     <!-- Top certificate has margin top 30, all the others have margin top 40 -->
     <div class="w3-container my-margin-top-30">
+        <h3>Online Data Analysis Course</h3>
+        <p>"Performing data analysis using Python."</p>
+        <a
+            href="{{ url_for('static', filename='docs/cert-fcc-python-data-analysis-sf.pdf') }}"
+            target="_blank"
+            rel="noopener noreferrer"
+        >
+            <img
+                src="../static/docs/cert-fcc-python-data-analysis.png"
+                alt="Data Analysis FCC certificate"
+                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+            />
+        </a>
+        <p>
+            <a
+                href="https://www.freecodecamp.org/certification/fcc011121fa-fa04-41d9-8189-0d017cab7a94/data-analysis-with-python-v7"
+                >View Data Analysis certificate on freeCodeCamp website</a
+            >
+        </p>
+    </div>
+    <div class="w3-container my-margin-top-40">
         <h3>Online JavaScript Course</h3>
         <p>"Implementing algorithms and data structures using JavaScript."</p>
         <a
@@ -81,12 +102,12 @@
             MongoDB."
         </p>
         <a
-            href="{{ url_for('static', filename='docs/cert-backend-api-fcc-sf.pdf') }}"
+            href="{{ url_for('static', filename='docs/cert-fcc-backend-api-sf.pdf') }}"
             target="_blank"
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-backend-api-fcc-sf.png"
+                src="../static/docs/cert-fcc-backend-api-sf.png"
                 alt="API FCC certificate"
                 class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
