removing redundant css class. fix data analysis cert link

--- a/app/templates/certificates.html
+++ b/app/templates/certificates.html
@@ -18,9 +18,9 @@
             rel="noopener noreferrer"
         >
             <img
-                src="../static/docs/cert-fcc-python-data-analysis.png"
+                src="../static/docs/cert-fcc-python-data-analysis-sf.png"
                 alt="Data Analysis FCC certificate"
-                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
@@ -41,7 +41,7 @@
             <img
                 src="../static/docs/cert-fcc-javascript-dsa-sf.png"
                 alt="JavaScript FCC certificate"
-                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
@@ -65,7 +65,7 @@
             <img
                 src="../static/docs/cert-fcc-ms-csharp-sf.png"
                 alt="C# Microscoft and FCC certificate"
-                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
@@ -86,7 +86,7 @@
             <img
                 src="../static/docs/cert-go-grider.png"
                 alt="Go Udemy certificate"
-                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
@@ -109,7 +109,7 @@
             <img
                 src="../static/docs/cert-fcc-backend-api-sf.png"
                 alt="API FCC certificate"
-                class="my-certificates-image-fcc-api w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
@@ -148,7 +148,7 @@
             <img
                 src="../static/docs/cert-sql-portilla.png"
                 alt="SQL Udemey Certificate"
-                class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
@@ -172,7 +172,7 @@
             <img
                 src="../static/docs/cert-python-portilla.png"
                 alt="Python Udemy Certificate"
-                class="my-certificates-image-jose w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
+                class="my-certificates-image w3-panel w3-theme-l5 w3-leftbar w3-topbar w3-bottombar w3-rightbar w3-border-black"
             />
         </a>
         <p>
