--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -70,18 +70,18 @@ body {
     margin: 3px;
 }
 
-/***** INFO PAGE. *****/
-.my-info-container {
+/***** CONTACT PAGE. *****/
+.my-contact-container {
     font-size: 1.25rem;
     margin-bottom: 30px;
     transition: transform 0.2s ease-in-out;
 }
 
-.my-info-container:hover {
+.my-contact-container:hover {
     transform: translate(4px, -4px);
 }
 
-.my-info-link {
+.my-contact-link {
     text-decoration: none;
 }
 
@@ -226,7 +226,7 @@ body {
         font-size: 1.5rem;
     }
 
-    .my-info-container {
+    .my-contact-container {
         font-size: 0.9rem;
         margin-bottom: 20px;
     }
