--- a/app/templates/project-base.html
+++ b/app/templates/project-base.html
@@ -20,15 +20,25 @@
         <div class="w3-col l6">
             <article class="w3-container">
                 <h2 class="my-project-base-title">{{ project['name'] }}</h2>
-                <p>
+                <p class=w3-padding-16>
                     <a
                         href="{{ project['production'] }}"
                         target="_blank"
                         rel="noopener noreferrer"
                     >
                         <span
-                            class="w3-tag w3-round w3-green my-shared-animated-tag-link"
+                            class="w3-tag w3-round w3-green my-shared-animated-tag-link w3-margin-right"
                             >View in production</span
+                        ></a
+                    >
+                    <a
+                        href="{{ project['sourcecode'] }}"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <span
+                            class="w3-tag w3-round w3-green my-shared-animated-tag-link"
+                            >Source code</span
                         ></a
                     >
                 </p>
